@@ -5,6 +5,14 @@
 ** CHANGES ALONG siesta-3.0 branch
 
 ------------------------------------------------------------------------
+2010-11-12  14:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-4
+Cosmetic fixes in Gen-basis/{ioncat,ionplot.sh}
+
+modified:
+  Util/Gen-basis/ioncat.f
+  Util/Gen-basis/ionplot.sh
+
+------------------------------------------------------------------------
 2010-11-12  14:50:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-3
 Fix test in m_getopts
 
